2001-10-19  Johan Dahlin  <zilch.am@home.se>

	* Makefile.am (install-data-local): Remove gconftool --shutdown.

	* devhelp.spec.in: Make it non b0rked.

	* src/devhelp-window.c (dw_zoom_level_changed_cb): Set menus
	correctly.

2001-10-19  Christophe Merlet  <redfox@eikonex.org>

	* configure.in: Added "fr" to ALL_LINGUAS.

2001-10-19  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "no" to ALL_LINGUAS.
	
2001-10-18  Christopher R. Gabriel  <cgabriel@cgabriel.org>

	* configure.in (ALL_LINGUAS): Added 'it'

2001-10-18  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Forced to disable traditional Chinese translation
	  temporarily, it was not shown at all on right pane.

2001-10-18  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in: Added "sk" to ALL_LINGUAS.

2001-10-18  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: gnome-print version was not checked properly.

2001-10-18  Johan Dahlin  <zilch.am@home.se>

	* src/bookshelf.c (bookshelf_add_book): Use a 'better' strcmp.

2001-10-17  Johan Dahlin  <zilch.am@home.se>

	* debian/.cvsignore: s/debian//.

	* src/bookshelf.c (bookshelf_add_directory): Fix so global books
	can be hidden.

2001-10-17  Johan Dahlin  <zilch.am@home.se>

	* debian/*: Added files for debian package.
	
	* devhelp.spec.in: Big update.

	* configure.in: Added a few *_REQUIRED and bumped another few.

	* src/devhelp-window.c (cmd_size_change_cb): Removed.
	(size_ui_listener): Added.
	(devhelp_window_new): Add 4 listeners.

	* ui/GNOME_DevHelp.ui: Updated to use radio style on font size.
	
2001-10-17  Richard Hult  <rhult@codefactory.se>

	* src/devhelp-search.c (devhelp_search_entry_key_press_cb): Better
	fix for the key navigation in the search entry.

2001-10-17  Mikael Hallendal  <micke@codefactory.se>

	* Makefile.am (EXTRA_DIST): added vim/devhelp.vim

	* configure.in: bumped version to 0.2.0.99

	* src/devhelp-controller.c:
	- fixes bug #195 in CFB.